--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -211,7 +211,7 @@
 
   @include vp-1199 {
     position: static;
-    margin: 0 176px 39px 0px;
+    margin: 0 176px 39px 0;
     width: 266px;
     height: 351px;
   }
