--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,26 +11,25 @@ $color-transparent: rgba(255, 255, 255, 0);
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
 $color-primary: #2d383f;
-$color-primary-opacity-20: rgba(45, 56, 63, 0.2);
-$color-primary-opacity-30: rgba(45, 56, 63, 0.3);
-$color-base-shadow: #1c33741a;
+$color-primary-opacity-20: rgba($color-primary, 0.2);
+$color-primary-opacity-30: rgba($color-primary, 0.3);
 $color-white: #ffffff;
-$color-white-opacity-50: rgba(255, 255, 255, 0.5);
+$color-white-opacity-50: rgba($color-white, 0.5);
 $color-black: #000000;
 $color-additional: #0266c1;
-$color-additional-opacity-10: #0266c11a;
+$color-additional-opacity-10: rgba($color-additional, 0.1);
 $color-condition: #1c3374;
 $color-disabled: #999999;
 $color-error: #ff121f;
-$color-podcast: rgb(213, 194, 178);
-$color-shadow: rgba(28, 51, 116, 0.1);
+$color-podcast: #d5c2b2;
+$color-shadow: rgba($color-condition, 0.1);
 
 // Gradient
 
 $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
-$hero-gradient: linear-gradient(112deg, rgba(15, 20, 41, 0.33) 17.23%, rgba(15, 20, 41, 0.00) 94.93%);
-$tours-gradient: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 22.3%, rgba(0, 0, 0, 0.00) 60.32%);
-$consultation-gradient: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%);
+$hero-gradient: linear-gradient(112deg, rgba(15, 20, 41, 0.33) 17.23%, rgba(15, 20, 41, 0) 94.93%);
+$tours-gradient: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 22.3%, rgba(0, 0, 0, 0) 60.32%);
+$consultation-gradient: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%);
 
 // Typography
 // ---------------------------------
