--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -17,6 +17,22 @@
   }
 }
 
+.wrapper.modal-open {
+  height: 100vh;
+  overflow: hidden;
+
+  &::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $color-primary-opacity-60;
+    z-index: 2;
+  }
+}
+
 .rouble {
   font-family: $ff-rouble;
   /* stylelint-disable */
