--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,6 +13,7 @@ $color-transparent: rgba(255, 255, 255, 0);
 $color-primary: #2d383f;
 $color-primary-opacity-20: rgba($color-primary, 0.2);
 $color-primary-opacity-30: rgba($color-primary, 0.3);
+$color-primary-opacity-60: rgba($color-primary, 0.6);
 $color-white: #ffffff;
 $color-white-opacity-50: rgba($color-white, 0.5);
 $color-black: #000000;
