--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -4,6 +4,7 @@
 
 .hero .container {
   padding: 0;
+  max-width: none;
 }
 
 .hero h1 {
@@ -24,7 +25,7 @@
 
   margin: 0 auto;
   width: 100%;
-  max-width: 1440px;
+  // max-width: 1440px;
   min-height: 800px;
 
   @include vp-1199 {
@@ -94,6 +95,9 @@
   display: flex;
   flex-direction: column;
   padding: 200px 120px 80px;
+
+  max-width: 1440px;
+  margin: 0 auto;
 
   @include vp-1199 {
     padding: 212px 45px 97px;
