--- a/source/sass/blocks/education.scss
+++ b/source/sass/blocks/education.scss
@@ -215,6 +215,7 @@
 .education__swiper-button:focus-visible {
   background-color: $color-white;
   border: 1px solid $color-condition;
+  outline: none;
 }
 
 .education__swiper-button:hover svg,
