--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -269,4 +269,30 @@
   font-style: normal;
   font-weight: 300;
   line-height: 100%; /* 12px */
+
+  position: relative;
+
+  &:hover {
+    &::after {
+      position: absolute;
+      content: "";
+      top: 17px;
+      left: -10px;
+      width: calc(100% + 20px);
+      height: 1px;
+      background-color: $color-primary;
+    }
+  }
+
+  &:focus {
+    color: $color-primary;
+    outline: 1px solid ;
+    outline-offset: 3px;
+  }
+
+  &:active,
+  &:disabled,
+  &--disabled {
+    color: $color-primary;
+  }
 }
