--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -117,6 +117,7 @@
 .reviews__swiper-button:focus-visible {
   background-color: $color-white;
   border: 1px solid $color-condition;
+  outline: none;
 }
 
 .reviews__swiper-button:hover svg,
