--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -159,6 +159,7 @@
 .tours__swiper-button:focus-visible {
   background-color: $color-white;
   border: 1px solid $color-condition;
+  outline: none;
 }
 
 .tours__swiper-button:hover svg,
