--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -166,6 +166,7 @@
 .gallery__swiper-button:focus-visible {
   background-color: $color-white;
   border: 1px solid $color-condition;
+  outline: none;
 }
 
 .gallery__swiper-button:hover svg,
