--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -3,24 +3,24 @@
 }
 
 .about-us__wrapper {
-  padding: 22px 0 52px;
+  padding: 78px 0 52px;
 
   @include vp-1199 {
-    padding: 18px 0 175px;
+    padding: 18px 0 171px;
   }
 
   @include vp-1023 {
-    padding: 18px 0 0;
+    padding: 18px 0 2px;
   }
 
   @include vp-767 {
-    padding: 407px 0 0;
+    padding: 407px 0 1px;
   }
 }
 
 .about-us__img-wrapper {
   position: absolute;
-  top: 0;
+  top: 56px;
   left: 0;
   z-index: -1;
 
