--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,10 +1,9 @@
 .footer {
   background-color: $color-white;
-  border-top: 1px solid $color-primary-opacity-20;
 }
 
 .footer__wrapper {
-  padding: 32px 0;
+  padding: 32px 0 32px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -81,7 +80,7 @@
 }
 
 .footer__list {
-  margin: 0 0 7px;
+  margin: 2px 0 0;
   padding: 0;
 
   list-style-type: none;
@@ -90,32 +89,55 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 10px 30px;
+  gap: 10px 31px;
 
-  @include vp-1023 {
-    justify-content: end;
-    gap: 10px 20px;
-  }
+  width: 800px;
+  transform: translate(-28px);
 
   @include vp-1199 {
+    justify-content: end;
     gap: 10px 20px;
+
+    width: 792px;
+    transform: translate(0);
+  }
+
+  @include vp-1023 {
+    gap: 10px 20px;
+    width: 536px;
   }
 
   @include vp-767 {
     margin: 0;
     display: block;
     column-count: 2;
-    gap: 20px;
+    gap: 33px;
+    width: 100%;
   }
 }
 
 .footer__item {
+  @include vp-1199 {
+    padding: 0 5px 0 0;
+
+    &:first-child {
+      padding: 0 3px 0 0;
+    }
+  }
+
   @include vp-767 {
     margin: 0 0 15px;
+    padding: 0;
     min-width: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &:first-child {
+      padding: 0;
+    }
+
+    width: 143px;
   }
 }
 
@@ -163,7 +185,7 @@
 }
 
 .footer__phone-link {
-  margin: 0 0 7px;
+  margin: 3px 0 0;
 
   color: $color-primary;
   text-align: right;
@@ -204,6 +226,7 @@
 
   @include vp-1199 {
     margin: 0 0 34px;
+    gap: 16px;
   }
 
   @include vp-767 {
@@ -218,6 +241,11 @@
   width: 30px;
   height: 30px;
   border: 1px solid $color-primary-opacity-30;
+
+  @include vp-1199 {
+    width: 32px;
+    height: 30px;
+  }
 
   &:hover,
   &:focus {
