--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,14 +1,14 @@
 .gallery__wrapper {
   position: relative;
-  padding-top: 100px;
+  padding: 22px 0 4px;
   overflow: hidden;
 
   @include vp-1199 {
-    padding-top: 15px;
+    padding: 15px 0 0;
   }
 
   @include vp-767 {
-    padding: 0 15px;
+    padding: 7px 15px 0;
   }
 }
 
@@ -76,18 +76,18 @@
   font-weight: 800;
   line-height: 100%; /* 35px */
 
-  margin: 1px 0 26px;
+  margin: 1px 0 24px;
   padding: 0;
 
   @include vp-1199 {
-    margin: 0 0 44px;
+    margin: 0 0 15px;
 
     font-size: 25px;
     line-height: normal;
   }
 
   @include vp-767 {
-    margin: 0 0 18px;
+    margin: 0 0 14px;
 
     font-size: 22px;
     line-height: 22px; /* 100% */
@@ -95,7 +95,7 @@
 }
 
 .gallery__wrapper p {
-  margin: 0 0 45px;
+  margin: 0 0 44px;
   padding: 0;
   width: 693px;
 
@@ -107,7 +107,7 @@
   line-height: 24px; /* 150% */
 
   @include vp-1199 {
-    margin: 0 0 37px;
+    margin: 0 0 21px;
     width: 420px;
 
     font-size: 14px;
@@ -115,7 +115,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 15px;
+    margin: 0 0 65px;
     width: 90%;
 
     font-size: 12px;
@@ -127,20 +127,16 @@
   position: absolute;
   display: flex;
   gap: 4px;
-  top: 40px;
+  top: 64px;
   right: 120px;
 
   @include vp-1199 {
-    top: 40px;
+    top: 76px;
     right: 45px;
   }
 
-  @include vp-1023 {
-    top: 46px;
-  }
-
   @include vp-767 {
-    top: 0;
+    top: 123px;
     right: 0;
   }
 }
@@ -203,6 +199,10 @@
 
   &:nth-child(odd) {
     width: 275px;
+  }
+
+  &:nth-child(3n) {
+    width: 272px;
   }
 
   &:nth-child(even) {
