--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -140,7 +140,7 @@
   font-weight: 600;
   line-height: 18px; /* 100% */
 
-  margin-top: 2px;
+  margin-top: 3px;
   padding: 15px;
   align-self: center;
   grid-column: 3/4;
@@ -159,6 +159,8 @@
   @include vp-767 {
     font-size: 14px;
     line-height: 14px; /* 100% */
+
+    margin: 8px 0 0;
     padding: 0;
     align-self: flex-end;
   }
