--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -33,6 +33,10 @@
   }
 
   @include vp-767 {
+    min-height: 420px;
+  }
+
+  @include vp-567 {
     min-height: 568px;
   }
 }
@@ -55,6 +59,10 @@
   }
 
   @include vp-767 {
+    min-height: 420px;
+  }
+
+  @include vp-567 {
     min-height: 568px;
   }
 }
@@ -97,6 +105,7 @@
   padding: 200px 120px 80px;
 
   max-width: 1440px;
+  min-height: 800px;
   margin: 0 auto;
 
   @include vp-1199 {
@@ -105,7 +114,13 @@
   }
 
   @include vp-767 {
-    padding: 132px 15px 48px;
+    min-height: 420px;
+    padding: 140px 15px 48px;
+  }
+
+  @include vp-567 {
+    min-height: 568px;
+    padding: 140px 15px 48px;
   }
 }
 
@@ -327,7 +342,7 @@
 .hero__btn {
   display: block;
   width: 180px;
-  margin: 0 0 134px;
+  margin: 0 0 40px;
   padding: 20px 20px 18px;
   border: 1px solid $color-additional;
   background-color: $color-additional;
@@ -349,7 +364,7 @@
   }
 
   @include vp-767 {
-    margin: 0 0 97px;
+    margin: 0;
   }
 
   &:hover,
@@ -377,6 +392,8 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+
+  margin-top: auto;
 
   @include vp-1199 {
     display: none;
