--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -6,18 +6,22 @@
 .navigation__list {
   list-style-type: none;
   margin: 0;
-  padding: 0;
-  width: 602px;
+  padding: 0 40px;
+  width: 654px;
   color: $color-white;
-  transform: translate(14px);
+  transform: translate(15px);
+  // row-gap: 30px;
+  gap: 30px 31px;
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  // justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 
   @include vp-1199 {
     margin: 0;
+    padding: 0;
     flex-direction: column;
     transform: none;
 
@@ -55,15 +59,16 @@
 .navigation__item {
   display: flex;
   align-items: center;
-  min-height: 62px;
+  margin: 1px 0 0;
+  // min-height: 62px;
 
   @include vp-1199 {
-    min-height: auto;
+    margin: 0;
   }
 }
 
 .navigation__link {
-  padding: 24px 15px 22px;
+  // padding: 0 15px;
   position: relative;
   display: block;
 
@@ -73,6 +78,14 @@
   font-style: normal;
   font-weight: 400;
   line-height: 16px; /* 100% */
+
+  // &:first-child {
+  //   padding: 0 15px 0 0;
+  // }
+
+  // &:last-child {
+  //   padding: 0 0 0 15px;
+  // }
 
   &:hover {
     &::after {
