--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,20 +1,17 @@
 .reviews__wrapper {
   position: relative;
-  padding: 53px 0;
+  padding: 53px 0 20px;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
 
   @include vp-1199 {
-    padding: 48px 0;
-  }
-
-  @include vp-1023 {
-    padding: 54px 0;
+    padding: 52px 0 67px;
   }
 
   @include vp-767 {
-    padding: 41px 0;
+    padding: 40px 0 29px;
+    min-height: 576px;
   }
 }
 
@@ -84,15 +81,11 @@
   right: 0;
 
   @include vp-1199 {
-    top: 40px;
-  }
-
-  @include vp-1023 {
-    top: 46px;
+    top: 44px;
   }
 
   @include vp-767 {
-    top: 31px;
+    top: 30px;
   }
 }
 
@@ -177,12 +170,12 @@
   }
 
   @include vp-767 {
-    padding: 20px;
+    padding: 20px 20px 18px;
     display: flex;
     max-width: none;
     min-height: 426px;
     flex-direction: column;
-    gap: 20px;
+    gap: 21px;
   }
 }
 
@@ -239,7 +232,7 @@
 }
 
 .reviews__info h3 {
-  margin: 14px 0 8px;
+  margin: 15px 0 7px;
   padding: 0;
 
   color: $color-primary;
@@ -254,7 +247,7 @@
   }
 
   @include vp-767 {
-    margin-top: -1px;
+    margin: 0 0 8px;
     font-size: 12px;
     line-height: 12px; /* 100% */
   }
