--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -37,17 +37,17 @@
 
 .tours__wrapper {
   position: relative;
-  padding: 123px 0 102px;
+  padding: 123px 0 109px;
   display: flex;
   flex-direction: column;
 
   @include vp-1199 {
-    padding: 68px 0 63px;
+    padding: 68px 0 54px;
     background: none;
   }
 
   @include vp-767 {
-    padding: 55px 0 40px;
+    padding: 55px 0 30px;
     overflow: hidden;
   }
 }
@@ -224,6 +224,10 @@
   right: 0;
   bottom: 0;
   background: $tours-gradient;
+
+  &--secondary {
+    background: $color-overlay;
+  }
 }
 
 .tours__background picture {
@@ -303,7 +307,7 @@
 
 .tours__place {
   background-color: $color-additional;
-  padding: 6px 12px;
+  padding: 7px 12px;
 }
 
 .tours__place p {
@@ -382,6 +386,7 @@
 
   display: flex;
   align-self: center;
+  transform: translate(1px);
 
   @include vp-767 {
     font-size: 14px;
