--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -24,6 +24,7 @@ $color-disabled: #999999;
 $color-error: #ff121f;
 $color-podcast: #d5c2b2;
 $color-shadow: rgba($color-condition, 0.1);
+$color-overlay: rgba($color-default-black, 0.2);
 
 // Gradient
 
@@ -58,6 +59,7 @@ $trans-600: 0.6s $tf-default;
 
 $vp-320: 320px;
 $vp-350: 350px;
+$vp-568: 568px;
 $vp-768: 768px;
 $vp-1024: 1024px;
 $vp-1200: 1200px;
