--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -197,7 +197,7 @@
     object-fit: cover;
   }
 
-  &:nth-child(odd) {
+  &:nth-child(2n+1) {
     width: 275px;
   }
 
@@ -205,14 +205,14 @@
     width: 272px;
   }
 
-  &:nth-child(even) {
+  &:nth-child(2n) {
     width: 298px;
   }
 
   @include vp-1199 {
     height: 450px;
 
-    &:nth-child(odd) {
+    &:nth-child(2n+1) {
       width: 338px;
 
       img {
@@ -223,7 +223,7 @@
       }
     }
 
-    &:nth-child(even) {
+    &:nth-child(2n) {
       width: 338px;
 
       picture {
@@ -251,11 +251,11 @@
   @include vp-1023 {
     height: 450px;
 
-    &:nth-child(odd) {
+    &:nth-child(2n+1) {
       width: 252px;
     }
 
-    &:nth-child(even) {
+    &:nth-child(2n) {
       width: 252px;
     }
   }
@@ -264,7 +264,7 @@
     gap: 3px;
     height: 260px;
 
-    &:nth-child(odd) {
+    &:nth-child(2n+1) {
       width: 158px;
 
       img {
@@ -275,7 +275,7 @@
       }
     }
 
-    &:nth-child(even) {
+    &:nth-child(2n) {
       width: 158px;
 
       picture {
