подгоняет под пп

--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -3,6 +3,10 @@
   padding: 22px 0 4px;
   overflow: hidden;
 
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+
   @include vp-1199 {
     padding: 15px 0 0;
   }
@@ -152,6 +156,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @include vp-1023 {
+    width: 34px;
+  }
+
+  @include vp-767 {
+    width: 37px;
+  }
 }
 
 .gallery__swiper-button svg {
@@ -253,10 +265,73 @@
 
     &:nth-child(2n+1) {
       width: 252px;
+
+      picture {
+        width: 252px;
+        height: 450px;
+        overflow: hidden;
+      }
+
+      img {
+        width: auto;
+        height: 123%;
+      }
+
+      picture > img {
+        display: block;
+        margin-top: -52px;
+      }
+    }
+
+    &:nth-child(3n) {
+      img {
+        width: auto;
+        height: 100%;
+      }
+
+      picture > img {
+        display: block;
+        margin-top: 0;
+        margin-left: 2px;
+      }
     }
 
     &:nth-child(2n) {
       width: 252px;
+
+      picture {
+        overflow: hidden;
+
+        &:first-child {
+          height: 180px;
+
+          img {
+            width: auto;
+            height: 113%;
+          }
+        }
+
+        &:last-child {
+          height: 265px;
+
+          img {
+            width: auto;
+            height: 113%;
+          }
+        }
+      }
+
+      picture:first-child > img {
+        display: block;
+        margin-left: 1px;
+        margin-top: -12px;
+      }
+
+      picture:last-child > img {
+        display: block;
+        margin-left: 1px;
+        margin-top: -17px;
+      }
     }
   }
 
@@ -264,14 +339,24 @@
     gap: 3px;
     height: 260px;
 
-    &:nth-child(2n+1) {
+    &:nth-child(2n+1),
+    &:nth-child(3n) {
       width: 158px;
 
-      img {
+      picture {
         width: 158px;
         height: 260px;
-        object-fit: cover;
-        object-position: center;
+        overflow: hidden;
+      }
+
+      img {
+        width: auto;
+        height: 123%;
+      }
+
+      picture > img {
+        display: block;
+        margin-top: -30px;
       }
     }
 
@@ -279,23 +364,37 @@
       width: 158px;
 
       picture {
+        overflow: hidden;
+
         &:first-child {
+          height: 100px;
+
           img {
-            width: 158px;
-            height: 100px;
-            object-fit: cover;
-            object-position: center;
+            width: auto;
+            height: 113%;
           }
         }
 
         &:last-child {
+          height: 157px;
+
           img {
-            width: 158px;
-            height: 157px;
-            object-fit: cover;
-            object-position: center;
+            width: auto;
+            height: 113%;
           }
         }
+      }
+
+      picture:first-child > img {
+        display: block;
+        margin-left: 1px;
+        margin-top: -7px;
+      }
+
+      picture:last-child > img {
+        display: block;
+        margin-left: 1px;
+        margin-top: -10px;
       }
     }
   }
