--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,6 +1,8 @@
 .advantages {
   position: relative;
   padding: 65px 0 116px;
+  overflow-x: hidden;
+
 
   @include vp-1199 {
     padding: 68px 0 45px;
