--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -26,6 +26,8 @@ html {
   text-rendering: optimizeLegibility;
   // если по прежнему есть проблемы с выравниванием
   // https://transfonter.org/ - включите настройку https://prnt.sc/12rnt6g и переконвертируйте шрифт
+  //плавный скролл
+  scroll-behavior: smooth;
 }
 
 body {
